--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.181.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "jszip": "^3.10.1",
+    "lucide-react": "^0.555.0",
+    "openai": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "openai": "^4.0.0",
-    "lucide-react": "^0.555.0",
-    "@react-three/fiber": "^9.4.2",
-    "@react-three/drei": "^10.7.7",
-    "jszip": "^3.10.1"
+    "three": "^0.181.2"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
