--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@legacy/*": ["./*"]
+      "@/*": ["src/*"]
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
