--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@monaco-editor/react": "^4.7.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "@types/jsdom": "^27.0.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "immer": "^11.1.3",
+    "jsdom": "^28.0.0",
     "jspdf": "^4.0.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.555.0",
