--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "postcss": "^8.5.6",
     "puppeteer": "^24.36.1",
     "tailwindcss": "^4.1.18",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
