--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "puppeteer": "^24.36.1",
+    "react-devtools": "^7.0.1",
     "tailwindcss": "^4.1.18",
     "tsconfig-paths": "^4.2.0",
     "typescript": "~5.8.2",
